fix: make fspm csv export presentation ready
